--- a/DownloadsCleanerGUI/DownloadsCleanerGUI.csproj
+++ b/DownloadsCleanerGUI/DownloadsCleanerGUI.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -93,6 +94,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DownloadsCleanerCL\DownloadsCleanerCL.csproj">
+      <Project>{373284ea-abf1-497f-a82c-9a1f4123a518}</Project>
+      <Name>DownloadsCleanerCL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
