--- a/DownloadsCleanerGUI/DownloadsCleanerGUI.csproj
+++ b/DownloadsCleanerGUI/DownloadsCleanerGUI.csproj
@@ -38,6 +38,8 @@
     <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Mobile" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
