--- a/DownloadsCleanerCL/DownloadsCleanerCL.csproj
+++ b/DownloadsCleanerCL/DownloadsCleanerCL.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows" />
@@ -45,6 +46,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigManager.cs" />
     <Compile Include="DownloadsFolder.cs" />
     <Compile Include="FilesDeleter.cs" />
     <Compile Include="FileSorter.cs" />
