--- a/DownloadsCleanerGUI/App.config
+++ b/DownloadsCleanerGUI/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <appSettings>
+    <add key="ServiceMainSettings" value="0"/>
+    <add key="ServiceSettings" value="0"/>
+    <add key="FilesNumber" value="0"/>
+    <add key="Size" value="0"/>
+    <add key="Days" value="0"/>
+    <add key="Limit" value="0"/>
+    <add key="OlderThan" value="0"/>
+  </appSettings>
 </configuration>
