app + service done

--- a/DownloadsCleanerService/App.config
+++ b/DownloadsCleanerService/App.config
@@ -3,4 +3,17 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <system.diagnostics>
+    <switches>
+      <add name="ServiceTraceSwitch" value="3" />
+    </switches>
+  </system.diagnostics>
+  <appSettings>
+    <add key="Path" value=""/>
+    <add key="Schedule" value="0"/>
+    <add key="MainSettings" value="0"/>
+    <add key="MainSettingsArg" value="0"/>
+    <add key="Settings" value="0"/>
+    <add key="SettingsArg" value="0"/>
+  </appSettings>
 </configuration>
