--- a/DownloadsCleanerCL/DownloadsCleanerCL.csproj
+++ b/DownloadsCleanerCL/DownloadsCleanerCL.csproj
@@ -47,12 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigManager.cs" />
+    <Compile Include="DeleteFromList.cs" />
     <Compile Include="DownloadsFolder.cs" />
     <Compile Include="FilesDeleter.cs" />
     <Compile Include="FileSorter.cs" />
     <Compile Include="FolderIcon.cs" />
     <Compile Include="MyFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WatcherController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
